Implemented the trigger of the full measure detection and scheduled it as an background job
